# tree-sitter-openscad

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  NEWS.md  README.md  binding.gyp  grammar.js  package-lock.json  package.json  test.js
.github/workflows/: ci.yml
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
examples/: basic.scad  function-call-precedence.scad  functions-and-ternaries.scad  indexing.scad  list-comprehension.scad  logical-precedence.scad  mathematical-precedence.scad  modules.scad  statements.scad  ternaries.scad
queries/: highlights.scm  indents.scm
script/: parse-examples
src/: grammar.json  node-types.json  parser.c
test/corpus/: items.txt  list-comprehension.txt  literals.txt  operators.txt  statements.txt
