[package]
name = "tree-sitter-openscad"
description = "scad grammar for the tree-sitter parsing library"
version = "0.1.0"
author = "Ian Boll <lordofthemaracas@gmail.com>"
keywords = ["incremental", "parsing", "openscad"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-openscad"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.19.5"

[build-dependencies]
cc = "1.0"
